sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: not found: value j
      while (plusPetitQue(i-j, v) && j<=i) {
                            ^AlgInsertionSort:5: error: not found: value j
      while (plusPetitQue(i-j, v) && j<=i) {
                                     ^AlgInsertionSort:6: error: not found: value j
        echange(i-j, i-j+1)
                  ^AlgInsertionSort:6: error: not found: value j
        echange(i-j, i-j+1)
                       ^