sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i <- 1 to getNombreValeurs-1){
    var v:Int = getValeur(i)
      while (plusPetitQue(i-j, v) && j<=i) {
        echange(i-j, i-j+1)
      }
  }
}